# Default-Scripts

./: audio_recorder.py  calendar_manager.py  clear_recycle_bin.py  clipboard_manager.py  control_volume.py  discord_bot.py  file_converter.py  file_ops.py  folder_to_github.py  google_search.py  job_search.py  linkedin_connecter.py  notification_setter.py  reddit_scraper.py  screen_recorder.py  startup_news.py  system_theme_toggler.py  task_manager.py
Environment Setup/: environment_setup.py
Environment Setup/templates/fastapi-react/backend/: .env  main.py  pyproject.toml  requirements.txt
Environment Setup/templates/flask-react/backend/: .env  pyproject.toml  requirements.txt
Environment Setup/templates/flask-react/backend/app/: __init__.py
Environment Setup/templates/flask-react/backend/app/models/: __init__.py
Environment Setup/templates/flask-react/backend/app/routes/: main.py
Job Search/: job_list_template.jinja  job_search.py
Resume/: resume.py  resume_template.jinja
Resume Optimizer/: resume_optimizer.py  resume_template.jinja
Resume Optimizer/styles/: style_cloyola.css  style_josylad_blue.css  style_josylad_gray.css  style_krishnavalliappan.css  style_mock_jakes_resume.css  style_samodum_bold.css
Resume/styles/: style_cloyola.css  style_jakes_resume.css  style_josylad_blue.css  style_josylad_gray.css  style_krishnavalliappan.css  (+2 more)
environment_setup/: express_setup.py  fastapi_setup.py  flask_setup.py  mern_setup.py  next_setup.py  sveltekit_setup.py  vite_setup.py  vue_setup.py
resume/: resume.py  resume_template.jinja
typings/: scripty.pyi
(+112 files in other folders)
